# classroom

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
abstract/: models.py  views.py
apps/announcement/: apps.py  models.py  serializers.py  student_serializers.py  student_views.py  urls.py  views.py
apps/batch/: apps.py  models.py  serializers.py  student_serializers.py  student_views.py  urls.py  views.py
apps/coupon/: models.py  serializers.py  views.py
apps/course/: filters.py  models.py  serializers.py  student_serializers.py  student_views.py  urls.py  utils.py  views.py
apps/filemanager/: apps.py  models.py  serializers.py  urls.py  views.py
apps/free_resource/: apps.py  models.py  serializers.py  student_serializers.py  student_views.py  urls.py  views.py
apps/lead/: models.py  serializers.py  urls.py  views.py
apps/mobile/: apps.py  models.py  serializers.py  urls.py  views.py
apps/notification/: models.py  serializers.py  urls.py  views.py
apps/payment/: models.py  serializers.py  student_serializers.py  student_views.py  urls.py  utils.py  views.py
apps/public/: serializers.py  urls.py  views.py
apps/quiz/: models.py
apps/setting/: enums.py  schema_definitions.py  urls.py  views.py
apps/test_series/: apps.py  models.py  serializers.py  student_serializers.py  student_views.py  urls.py  views.py
apps/user/: models.py  schema_definitions.py  serializers.py  student_views.py  (+3 more)
classroom/: asgi.py  settings.py  urls.py  wsgi.py
config/: custom_storages.py  handler.py  live_video.py  permissions.py  razor_payment.py  weasy_pdf.py
(+129 files in other folders)
